--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ h1, h2, h3, h4, h5 {
 }
 
 a {
-	color: #000;
 	font-weight: 700;
 }
 
@@ -66,6 +65,7 @@ header h1 {
 	margin-right:20px;
 	padding-right:20px;
 	border-right: 2px solid white;
+	border:none;
 }
 
 #header-nav li:last-child {
@@ -76,11 +76,11 @@ header h1 {
 
 #header-nav li a{
 	color: #ffffff;
-	font-size: 11px;
+	font-size: 15px;
 }
 
 #header-nav {
-	margin-top:20px;
+	margin-top:25px;
 	float: right;
 }
 
@@ -93,7 +93,7 @@ header h1 {
 	text-indent: -9999px;
 	/* background-image:url('../img/logo.svg'); */
 	background-repeat: no-repeat;
-	margin:40px 0px 15px;
+	margin:25px 0px 10px;
 }
 
 .top-bar {
@@ -111,7 +111,7 @@ header h1 {
 
 .top-bar-section ul li > a {
 	font-family: 'Open Sans', sans-serif;
-	font-size:14px;
+	font-size:12px;
 }
 
 .top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
@@ -135,7 +135,7 @@ header h1 {
 }
 
 .top-bar-section > ul > li:not(.has-form) > a:not(.button) {
-	padding: 0 2.01rem !important;
+	padding: 0 1.01rem !important;
 }
 
 .top-bar-section .has-dropdown > a:after {
@@ -160,7 +160,6 @@ header h1 {
 ----------------------- */
 
 .home-facts img {
-	max-width: 150px;
 	margin: 5px 10px 10px 0px;
 }
 
@@ -228,9 +227,24 @@ footer p {
 	color:white;
 }
 
+#side-nav a {
+	color: #000;
+}
+
 .callout {
-	background-color: #e7e7e7;
 	margin-bottom: 30px;
+	background-color: #fff;
+  box-shadow: inset 0 0 35px #fff,
+    3px 3px 5px 0 #ccc;;
+		padding:1em;
+}
+
+.callout p {
+	font-size:.9em;
+}
+
+.callout img.expand {
+	width:100%!important;
 }
 
 .callout ul {
@@ -314,4 +328,31 @@ a.custom_02:hover
 	font-weight: bold;
     color: #666666;
 	text-decoration: none;
+}
+
+
+/* QUAID TIME */
+#side-nav-wrapper {
+
+}
+	#side-nav-wrapper img {
+		width: 30%;
+		margin-left:35%;
+		margin-right:35%;
+	}
+
+#quick-facts {
+		margin-top:2em;
+}
+
+	#quick-facts h3 {
+		text-align:center;
+	}
+
+#more-stuff {
+
+}
+
+#more-stuff .find-out-more {
+	text-align:center;
 }
