--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ li {
 	font-size: .95rem;
 }
 
+.page-container li {
+	margin-bottom:1em;
+}
+
+#side-nav li {
+	margin-bottom:0em;
+}
+
 h1, h2, h3, h4, h5 {
 	font-weight: 700;
 	line-height: 1.3;
