--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,8 @@ header h1 {
 .page-container {
 	background-color: #ffffff;
 	padding:20px;
+	box-shadow: inset 0 0 35px #fff,
+		3px 3px 5px 0 #ccc;
 }
 
 /* Home Page
@@ -247,7 +249,7 @@ footer p {
 	margin-bottom: 30px;
 	background-color: #fff;
   box-shadow: inset 0 0 35px #fff,
-    3px 3px 5px 0 #ccc;;
+    3px 3px 5px 0 #ccc;
 		padding:1em;
 }
 
